# gnome-software-plugin-android

./: meson.build
data/: org.gnome.Software.Plugin.Android.metainfo.xml
src/gs-plugin-android/: gs-plugin-android.c  gs-plugin-android.h
